# goros

./: CMakeLists.txt  README.md  main.cpp  resume_research.py
docs/: ToDoList.md
include/: Affine.h  Computation.h  Formula.h  Ops.h  Parser.h  Pattern.h  Polynomial.h  Producer.h
src/core/: Affine.cpp  Computation.cpp  Formula.cpp  Ops.cpp  Parser.cpp  Pattern.cpp  Polynomial.cpp  Producer.cpp
src/operators/: activation.cpp  avgpooling.cpp  batch_flatten.cpp  batch_norm.cpp  bilinear.cpp  concatenate.cpp  convolution.cpp  dropout.cpp  element.cpp  matmul.cpp  maxpooling.cpp  nearest_neighbor.cpp  pad.cpp  slice.cpp  split.cpp  transpose.cpp  winograd.cpp  yolo_reorg.cpp
tests/: alexnet.cpp  bert.cpp  dcgan.cpp  demo.cpp  densenet.cpp  dqn.cpp  inception_v3.cpp  layer.cpp  layer.h  lstm.cpp  mlp.cpp  mobilenet.cpp  nasnet.cpp  nasnet_a.cpp  nasrnn.cpp  resnet.cpp  resnet_3d.cpp  resnext.cpp  squeezenet.cpp  synthetic.cpp  unet.cpp  vgg.cpp  yolo_v1.cpp  yolo_v2.cpp  yolo_v3.cpp  yolo_v4.cpp  yolo_v5.cpp
